# q22

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICES  README.md  bookmarkdialog.cpp  bookmarkdialog.h  bookmarks.ui  colourpickerwidget.cpp  colourpickerwidget.h  copyas.ui  datatypecombobox.cpp  datatypecombobox.h  dlgabout.cpp  dlgcopyas.cpp  dlgcopyas.h  dlgexport.cpp  dlgexport.h  dlgimport.cpp  dlgpastespecial.cpp  dlgpastespecial.h  finddialog.cpp  finddialog.h  finddialog.ui  gotodialog.cpp  gotodialog.h  gotodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menucombobox.cpp  menucombobox.h  palettes.cpp  (+19 more)
src/Causeway/: CMakeLists.txt  Causeway.vcxproj  display.cpp  error.cpp  keywords.h  lexer.cpp  lexer.h  parse_expr.cpp  parse_typedecl.cpp  parser.cpp  parser.h  stmt.h  tchar_compat.h  types.h
src/Causeway/strata/: README.md  elf.struct  pe.struct
src/HexEdit/: CMakeLists.txt  bookmarkcolourwidget.cpp  bookmarkdialog.cpp  bookmarks.ui  bookmarkstore.cpp  datatypecombobox.cpp  datatypecombobox.h  dialog-chrome.cpp  dlgabout.cpp  dlgcopyas.cpp  dlgexport.cpp  dlgimport.cpp  dlgimport.h  dlgpastespecial.cpp  dlgprogress.cpp  dockpanelhost.cpp  fileproperties.cpp  fileproperties.h  finddialog.cpp  finddialog.h  gotodialog.cpp  gotodialog.ui  linux-chrome.cpp  linux-chrome.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menucombobox.cpp  palettecolourpicker.cpp  palettes.cpp  palettes.h  preferences.cpp  preferences.h  screencolorpicker.h  settings.cpp  settings.h  settingscard.cpp  slideoverlay.cpp  slideoverlay.h  (+11 more)
src/HexEdit/bookmarks/: bookmarkactivation.cpp  bookmarkactivation.h  bookmarkcolourwidget.cpp  bookmarkcombo.cpp  bookmarkcombo.h  bookmarkpopup.cpp  bookmarkpopup.h  bookmarks.ui  bookmarkstore.cpp  bookmarkstore.h  dlgbookmark.cpp
src/HexEdit/chrome/: dialog-chrome.cpp  dialog-chrome.h  linux-chrome.cpp  linux-chrome.h  popupmenucallout.cpp  popupmenucallout.h  roundedlistwidget.cpp  roundedlistwidget.h  shadow-chrome.cpp  shadow-chrome.h  titlebar.cpp  titlebar.h  windows-chrome.cpp  windows-delayload.cpp
src/HexEdit/combos/: datatypecombobox.cpp  datatypecombobox.h  menucombobox.cpp  menucombobox.h  statuscomboboxes.cpp  statuscomboboxes.h  valuecombobox.cpp  valuecombobox.h
src/HexEdit/dialogs/: bookmarkcolourwidget.cpp  bookmarkcolourwidget.h  bookmarks.ui  bookmarkstore.h  copyas.ui  dlgabout.cpp  dlgbookmark.cpp  dlgbookmark.h  dlgexport.cpp  dlgexport.h  dlgimport.cpp  dlgimport.h  dlgpastespecial.cpp  dlgprogress.h  exportformat.cpp  exportformat.h  importformat.cpp  importformat.h  pastespecial.ui
src/HexEdit/disasm/: branchtarget.h  codediscovery.cpp  codediscovery.h  demangle.cpp  demangle.h  disasmpanel.cpp  disasmpanel.h  elfmetadata.cpp  elfmetadata.h  pemetadata.cpp  pemetadata.h
src/HexEdit/filestats/: banner.cpp  banner.h  checksum.cpp  datainterpreter.cpp  entropy.cpp  entropy.h  properties.cpp  resizegrip.cpp  resizegrip.h  sidepanel.cpp  sidepanel.h  strings.cpp  stringscan.cpp  stringscan.h  widgets.cpp  widgets.h
src/HexEdit/palette/: palettecolourpicker.h  palettes.cpp  palettes.h  paletteswatch.cpp  screencolorpicker.cpp  screencolorpicker.h
src/HexEdit/panels/: dockpanelhost.cpp  dockpanelhost.h  dockpanelrow.cpp  dockpanelrow.h  finddialog.cpp  finddialog.h  findpanel.cpp  findpanel.h  findpanel.ui  findpattern.cpp  findpattern.h  gotodialog.cpp  gotodialog.h  gotopanel.cpp  gotopanel.h  gotopanel.ui  sourcebreadcrumbbar.cpp  sourcebreadcrumbbar.h
src/HexEdit/resources/: HexEdit.desktop  HexEdit.rc  hexedit.desktop  hexedit.rc  q22.desktop  q22.metainfo.xml  qt.conf  strata_docs.qrc
src/HexEdit/settings/: appconfig.cpp  appconfig.h  focusnavigation.cpp  focusnavigation.h  preferences.cpp  preferences.h  screencolorpicker.cpp  scrollhintoverlay.cpp  scrollhintoverlay.h  settings.cpp  settings.h  settingscard.cpp  settingscard.h  slideoverlay.cpp  slideoverlay.h  togglebuttongroup.cpp  togglebuttongroup.h
src/HexEdit/structview/: dexsemanticview.cpp  dexsemanticview.h  elfsemanticview.cpp  elfsemanticview.h  pesemanticview.cpp  pesemanticview.h  structurebranchicons.h  structurecommentformatter.h  structuredefinitionmanager.cpp  structuredefinitionmanager.h  structuredisplayoptions.h  structuregriditemdelegate.cpp  (+13 more)
src/HexView/: CMakeLists.txt  hexview.cpp  hexview.h  hexviewbookmark.cpp  hexviewbookmark.h  hexviewbookmarklogic.cpp  hexviewbookmarklogic.h  hexviewdragdrop.cpp  hexviewdraw.cpp  hexviewfind.cpp  hexviewkeyboard.cpp  hexviewmouse.cpp  hexviewscroll.cpp  seqbuf.cpp  sequence.cpp  sequence.h
src/TypeLib/: CMakeLists.txt  display.cpp  errordef.h  expr.h  keywords.h  lexer.cpp  lexer.h  parse_expr.cpp  parse_typedecl.cpp  parser.cpp  parser.h  tchar_compat.h  type_utils.cpp  types.h
src/causeway/: .clang-tidy  CMakeLists.txt  causeway.vcxproj  display.cpp  error.cpp  error.h  errordef.h  expr.h  keywords.h  lexer.cpp  lexer.h  parse_expr.cpp  parse_typedecl.cpp  parser.cpp  parser.h  stmt.h  stringprint.h  type_utils.cpp  types.h
src/qexed/: CMakeLists.txt  colourpickerwidget.h  datatypecombobox.cpp  datatypecombobox.h  dlgabout.cpp  dlgabout.h  dlgexport.cpp  dlgimport.cpp  dlgimport.h  dlgpastespecial.cpp  dlgpastespecial.h  dlgprogress.h  dockpanelhost.h  finddialog.cpp  finddialog.ui  focusnavigation.cpp  focusnavigation.h  gotodialog.cpp  gotodialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menucombobox.cpp  menucombobox.h  palettes.cpp  palettes.h  paletteswatch.cpp  paletteswatch.h  preferences.cpp  preferences.h  qexed.rc  screencolorpicker.cpp  screencolorpicker.h  settings.cpp  settings.h  settingscard.cpp  slideoverlay.cpp  statusbar.cpp  statusbar.h  theme.cpp  (+2 more)
tests/: CMakeLists.txt  SMOKE_TESTS.md  bookmark_tests.cpp  causeway_tests.cpp  disasm_tests.cpp  exportformat_tests.cpp  findpanel_tests.cpp  importformat_tests.cpp  sequence_tests.cpp  stringscan_tests.cpp  structview_tests.cpp  typelib_tests.cpp
tests/structview/: structview_testsupport.h
(+92 files in other folders)
